<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/navigation_pickmovie"
            android:icon="@drawable/register"
            android:title="@string/register" />
        <item
            android:id="@+id/navigation_list"
            android:icon="@drawable/list"
            android:title="@string/list" />
        <item
            android:id="@+id/navigation_map"
            android:icon="@drawable/map"
            android:title="@string/mapa" />

        <item
            android:id="@+id/navigation_cinemas"
            android:icon="@drawable/info"
            android:title="@string/cinemas_info" />

        <item
            android:id="@+id/navigation_speech"
            android:icon="@drawable/mic2"
            android:title="@string/sarch_registration" />
    </group>

</menu>