<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/movie_app"
        android:textSize="24sp" />

    <!-- Featured movie section -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/featured_movie_poster"
            android:layout_width="160dp"
            android:layout_height="210dp" />

        <TextView
            android:id="@+id/featured_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/featured_movie_poster"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/featured_movie_poster"
            android:text="@string/featured_movie_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/featured_movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/featured_movie_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/featured_movie_poster"
            android:text="@string/featured_movie_description"
            android:textSize="16sp" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cinema_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/cinema_label_frequented"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cinema_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/number_registrations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/number_registrations"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registrations_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/number_registrations_rate_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/number_registrations_rate_media"
            android:textSize="18sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_registrations_rate_media_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/delete_all_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/delete_junk" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
